--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "if-env": "^1.0.4",
+    "react-bootstrap": "^1.0.0-beta.11",
     "react-router-dom": "^5.0.1"
   }
 }
